AssineJa/force-app/main/default/objects/Customer_Support__c/Customer_Support__c.object-meta.xml
<CustomObject>
    <label>Customer Support</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Customer Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers Support</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>