AssineJa/force-app/main/default/objects/Customer_Support__c/fields/additional_info__c.field-meta.xml
<CustomField>
    <fullName>additional_info__c</fullName>
    <label>Dados Adicionais</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>