AssineJa/force-app/main/default/objects/Customer_Support__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Customers Support</relationshipLabel>
    <relationshipName>Customers_Support</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>