AssineJa/force-app/main/default/objects/Customer_Support__c/fields/CustuomerID__c.field-meta.xml
<CustomField>
    <fullName>CustuomerID__c</fullName>
    <label>CustuomerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>