AssineJa/force-app/main/default/objects/Customer_Support__c/fields/prioridade__c.field-meta.xml
<CustomField>
    <fullName>prioridade__c</fullName>
    <label>prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>